175 of 185, and two aggregation bugs worth keeping
countsFor threw an NPE building its own pipeline: List.of rejects null, and the third branch of
the $cond for salesCurrency is null - an Event that has sold nothing has no currency to report.
Arrays.asList permits it. That one exception was behind nine cover-image failures and six event
lifecycle ones, because both use cases end by asking for the counts.

countSeats returns the right numbers and the listing still reports zero, so something between
the aggregation and the DTO is dropping them. Left failing rather than guessed at: the pipeline
demonstrably returns total=6 under the right eventId, which is enough to say the defect is
downstream and not enough to say where.

Both are the same shape and it is the shape worth reporting. A SQL projection is checked when
the application starts - a constructor expression that does not line up fails at boot. A
pipeline is assembled at runtime out of nested Documents, and a mistake in one surfaces as a
wrong number several layers away, or as nothing at all. Neither of these was a MongoDB
limitation. Both were mine, and neither could have happened in the SQL they replaced.

Remaining 10:
  4  EventDiscoveryTest        the seat counts above
  2  RedemptionConcurrencyTest no row locks - expected, and the point
  2  EventTenancyTest/OrderTenancyTest  the rewritten loss tests, expectations still guessed
  1  DeploymentConfigurationTest        reads application.yml, which no longer names a datasource
  1  AdmissionTest

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01PTe4zxtkWJxZAPyeBF2QAk